--- a/app/config/sculpin_site.yml
+++ b/app/config/sculpin_site.yml
@@ -10,5 +10,5 @@ github: https://github.com/mikeSimonson
 joindin: https://joind.in/user/view/23225
 
 # Insert your disqus shortname
-#disqus:
-#    shortname:
+disqus:
+    shortname: mikesimonsontechnicalblog
